[gd_scene load_steps=53 format=3 uid="uid://cnkat3xpqi7jp"]

[ext_resource type="Texture2D" uid="uid://bghcxfv35bkm4" path="res://Assets/Graphics/Ship/Hull/Hull - Full Health.png" id="1_0bigh"]
[ext_resource type="Script" path="res://Scripts/Entities/Player/player.gd" id="1_67w6s"]
[ext_resource type="Texture2D" uid="uid://jno7ucidrbrh" path="res://Assets/Graphics/Ship/Engine Effects/Base Engine - Idle.png" id="2_45pm1"]
[ext_resource type="Texture2D" uid="uid://b7eae5hkbacoq" path="res://Assets/Graphics/Ship/Engine Effects/Base Engine - Powering.png" id="3_1od03"]
[ext_resource type="Texture2D" uid="uid://2670v0c05b7d" path="res://Assets/Graphics/Ship/Engines/Engines - Base Engine.png" id="4_3rmb7"]
[ext_resource type="Texture2D" uid="uid://xkn35yxax2dp" path="res://Assets/Graphics/Ship/Weapons/Main Ship - Auto Cannon 1-Sheet.png" id="5_1y74t"]
[ext_resource type="Script" path="res://Scripts/Entities/Player/Weapons/autocannonManager.gd" id="6_3l6xn"]
[ext_resource type="Texture2D" uid="uid://b84tqb21s41vg" path="res://Assets/Graphics/Ship/Weapons/Main Ship - Auto Cannon 2-Sheet.png" id="6_ha0yc"]
[ext_resource type="Texture2D" uid="uid://dh47xynmol20y" path="res://Assets/Graphics/Ship/Shields/Shields - Front and Side Shield.png" id="9_n3gyj"]
[ext_resource type="Texture2D" uid="uid://b1c1d574t232p" path="res://Assets/Graphics/Ship/Shields/Shields - Front Shield.png" id="10_nliki"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gukxd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3cjkw"]
atlas = ExtResource("5_1y74t")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgkpo"]
atlas = ExtResource("5_1y74t")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_75jwi"]
atlas = ExtResource("5_1y74t")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yaujw"]
atlas = ExtResource("5_1y74t")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vptov"]
atlas = ExtResource("5_1y74t")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ealp"]
atlas = ExtResource("5_1y74t")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ontq"]
atlas = ExtResource("5_1y74t")
region = Rect2(288, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_2008f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cjkw")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgkpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75jwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yaujw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vptov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ealp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ontq")
}],
"loop": false,
"name": &"shooting",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_fvapb"]
atlas = ExtResource("6_ha0yc")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2f5n"]
atlas = ExtResource("6_ha0yc")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_41fff"]
atlas = ExtResource("6_ha0yc")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_33tit"]
atlas = ExtResource("6_ha0yc")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5lb1"]
atlas = ExtResource("6_ha0yc")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmt13"]
atlas = ExtResource("6_ha0yc")
region = Rect2(288, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_d3w0u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvapb")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2f5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41fff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33tit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5lb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmt13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvapb")
}],
"loop": false,
"name": &"shooting",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_puy8w"]
atlas = ExtResource("2_45pm1")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kgwi"]
atlas = ExtResource("2_45pm1")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a81vd"]
atlas = ExtResource("2_45pm1")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ih4v1"]
atlas = ExtResource("3_1od03")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xa5c"]
atlas = ExtResource("3_1od03")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cayml"]
atlas = ExtResource("3_1od03")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3t15q"]
atlas = ExtResource("3_1od03")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_rtd4v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_puy8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kgwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a81vd")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ih4v1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xa5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cayml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3t15q")
}],
"loop": true,
"name": &"powering",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_cn0ay"]
atlas = ExtResource("9_n3gyj")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3utj3"]
atlas = ExtResource("9_n3gyj")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mltc"]
atlas = ExtResource("9_n3gyj")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dduu"]
atlas = ExtResource("9_n3gyj")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cd25"]
atlas = ExtResource("9_n3gyj")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt3lu"]
atlas = ExtResource("9_n3gyj")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0ptj"]
atlas = ExtResource("10_nliki")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqtc1"]
atlas = ExtResource("10_nliki")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukn0t"]
atlas = ExtResource("10_nliki")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvd7m"]
atlas = ExtResource("10_nliki")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvddv"]
atlas = ExtResource("10_nliki")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gp2h8"]
atlas = ExtResource("10_nliki")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_opppx"]
atlas = ExtResource("10_nliki")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6p0lt"]
atlas = ExtResource("10_nliki")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xmin"]
atlas = ExtResource("10_nliki")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oskkt"]
atlas = ExtResource("10_nliki")
region = Rect2(576, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_o2g7i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cn0ay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3utj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mltc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dduu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cd25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt3lu")
}],
"loop": true,
"name": &"basic shield",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0ptj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqtc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukn0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvd7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvddv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gp2h8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opppx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6p0lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xmin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oskkt")
}],
"loop": true,
"name": &"front shield",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"no shield",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6vr8p"]
size = Vector2(20, 40)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 28
motion_mode = 1
script = ExtResource("1_67w6s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gukxd")

[node name="Weapons" type="Node2D" parent="."]

[node name="Autocannon" type="Node2D" parent="Weapons"]
script = ExtResource("6_3l6xn")

[node name="Autocannon1" type="AnimatedSprite2D" parent="Weapons/Autocannon"]
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_2008f")
animation = &"shooting"
autoplay = "idle"

[node name="Barrel1" type="Marker2D" parent="Weapons/Autocannon/Autocannon1"]
position = Vector2(-9, -12)

[node name="Autocannon2" type="AnimatedSprite2D" parent="Weapons/Autocannon"]
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_d3w0u")
animation = &"shooting"
autoplay = "idle"

[node name="Barrel2" type="Marker2D" parent="Weapons/Autocannon/Autocannon2"]
position = Vector2(9, -12)

[node name="Timer" type="Timer" parent="Weapons/Autocannon"]
wait_time = 0.3
one_shot = true

[node name="Sprites" type="Node2D" parent="."]
rotation = 1.5708

[node name="BaseEngine" type="Sprite2D" parent="Sprites"]
texture = ExtResource("4_3rmb7")

[node name="BaseEngineEffects" type="AnimatedSprite2D" parent="Sprites/BaseEngine"]
sprite_frames = SubResource("SpriteFrames_rtd4v")
animation = &"idle"
autoplay = "idle"

[node name="Hull" type="Sprite2D" parent="Sprites"]
texture = ExtResource("1_0bigh")

[node name="Shields" type="AnimatedSprite2D" parent="Sprites"]
sprite_frames = SubResource("SpriteFrames_o2g7i")
animation = &"front shield"
autoplay = "no shield"

[node name="Front Shield" type="Area2D" parent="." groups=["front shield"]]
collision_layer = 16
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Front Shield"]
position = Vector2(13, 0)
shape = SubResource("RectangleShape2D_6vr8p")
disabled = true

[node name="Front shield timer" type="Timer" parent="Front Shield"]
wait_time = 10.0
one_shot = true

[connection signal="animation_finished" from="Weapons/Autocannon/Autocannon1" to="Weapons/Autocannon" method="_on_autocannon_1_animation_finished"]
[connection signal="animation_finished" from="Weapons/Autocannon/Autocannon2" to="Weapons/Autocannon" method="_on_autocannon_2_animation_finished"]
[connection signal="timeout" from="Weapons/Autocannon/Timer" to="Weapons/Autocannon" method="_on_timer_timeout"]
[connection signal="timeout" from="Front Shield/Front shield timer" to="." method="_on_front_shield_timer_timeout"]
